--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.0",
+    "handlebars": "^4.7.7",
+    "moment": "^2.29.1",
     "mongoose": "^5.12.2",
     "nodemon": "^2.0.7"
   }
