--- a/package.json
+++ b/package.json
@@ -1,23 +1,34 @@
 {
-  "name": "dad_is_prevate_money",
+  "name": "expense-tracker",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
-    "seed": "node models/seeds/categorySeeder.js && node models/seeds/recordSeeder.js ",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.0",
     "handlebars": "^4.7.7",
+    "method-override": "^3.0.0",
     "moment": "^2.29.1",
     "mongoose": "^5.12.2",
     "nodemon": "^2.0.7"
-  }
+  },
+  "devDependencies": {},
+  "scripts": {
+    "start": "node app.js",
+    "dev" : "nodemon app.js",
+    "seed" : "node models/seeds/recordSeeder && node models/seeds/categorySeeder",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Steavn-Chen/expense-tracker.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Steavn-Chen/expense-tracker/issues"
+  },
+  "homepage": "https://github.com/Steavn-Chen/expense-tracker#readme"
 }
