--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.0",
+    "express-router": "0.0.1",
     "handlebars": "^4.7.7",
     "method-override": "^3.0.0",
     "moment": "^2.29.1",
@@ -16,8 +17,8 @@
   "devDependencies": {},
   "scripts": {
     "start": "node app.js",
-    "dev" : "nodemon app.js",
-    "seed" : "node models/seeds/recordSeeder && node models/seeds/categorySeeder",
+    "dev": "nodemon app.js",
+    "seed": "node models/seeds/recordSeeder && node models/seeds/categorySeeder",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
