--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express-handlebars": "^5.3.0",
     "express-router": "0.0.1",
     "handlebars": "^4.7.7",
+    "handlebars-helpers": "^0.10.0",
     "method-override": "^3.0.0",
     "moment": "^2.29.1",
     "mongoose": "^5.12.2",
